############################################################################
# This file is part of the UniSet library                                  #
############################################################################

SUBDIRS = UniSetTypes Processes Services
include $(top_builddir)/conf/common.mk
