############################################################################
# This file is part of the UniSet library                                  #
############################################################################

SUBDIRS = scripts Admin NullController SViewer-text \
	InfoServer SMonit MBTester codegen SImitator
#MapSourceParser ClassGen

include $(top_builddir)/conf/common.mk

include $(top_builddir)/conf/common.mk



