############################################################################
# This file is part of the UniSet library								  #
############################################################################

SUBDIRS = scripts Admin NullController SViewer-text \
	SMonit MBTester codegen SImitator ULog

include $(top_builddir)/include.mk
