############################################################################
# This file is part of the UniSet library                                  #
############################################################################

SUBDIRS=cityhash102 libfarmhash

include $(top_builddir)/include.mk
