############################################################################
# This file is part of the UniSet library                                  #
############################################################################

SUBDIRS=Threads ObjectRepository Processes Interfaces Timers IOs Services Various Communications

include $(top_builddir)/conf/common.mk

