############################################################################
# This file is part of the UniSet library                                  #
############################################################################

SUBDIRS=ObjectRepository Processes Interfaces Timers Services Various Communications LogServer

