############################################################################
# This file is part of the UniSet library								  #
############################################################################

SUBDIRS=Core ObjectRepository Processes Timers Services Various Communications Log

include $(top_builddir)/include.mk
