############################################################################
# This file is part of the UniSet library                                  #
############################################################################

bin_PROGRAMS 			= uniset-admin
uniset_admin_SOURCES 	= admin.cc
uniset_admin_LDADD 		= $(top_builddir)/lib/libUniSet.la
uniset_admin_CPPFLAGS	= -I$(top_builddir)/lib


include $(top_builddir)/conf/setting.mk

