############################################################################
# This file is part of the UniSet library                                  #
############################################################################

bin_PROGRAMS 				= uniset-infoserver
uniset_infoserver_SOURCES	= main.cc
uniset_infoserver_LDADD 	= $(top_builddir)/lib/libUniSet.la
uniset_infoserver_CPPFLAGS	= -I$(top_builddir)/lib $(SIGC_CFLAGS)

include $(top_builddir)/conf/setting.mk
