############################################################################
# This file is part of the UniSet library                                  #
############################################################################

bin_PROGRAMS 			= jrntest
jrntest_SOURCES 	= JrnTest.cc
jrntest_LDADD 		= $(top_builddir)/lib/libUniSet.la
jrntest_CPPFLAGS	= -I$(top_builddir)/include

include $(top_builddir)/conf/setting.mk

