############################################################################
# This file is part of the UniSet library                                  #
############################################################################

bin_PROGRAMS 					= uniset-nullController
uniset_nullController_SOURCES	= NullController.cc main.cc
uniset_nullController_LDADD 	= $(top_builddir)/lib/libUniSet.la
uniset_nullController_CPPFLAGS	= -I$(top_builddir)/lib $(SIGC_CFLAGS)

include $(top_builddir)/conf/setting.mk
