############################################################################
# This file is part of the UniSet library                                  #
############################################################################

bin_PROGRAMS = @PACKAGE@-nullController
@PACKAGE@_nullController_SOURCES  = NullController.cc main.cc
@PACKAGE@_nullController_LDADD    = $(top_builddir)/lib/libUniSet2.la
@PACKAGE@_nullController_CPPFLAGS = -I$(top_builddir)/lib $(SIGC_CFLAGS)

