############################################################################
# This file is part of the UniSet library                                  #
############################################################################

bin_PROGRAMS 					= uniset-sviewer-text
uniset_sviewer_text_SOURCES		= main.cc
uniset_sviewer_text_LDADD 		= $(top_builddir)/lib/libUniSet.la
uniset_sviewer_text_CPPFLAGS	= -I$(top_builddir)/lib

include $(top_builddir)/conf/setting.mk

