############################################################################
# This file is part of the UniSet library                                  #
############################################################################

bin_PROGRAMS = @PACKAGE@-sviewer-text
@PACKAGE@_sviewer_text_SOURCES  = main.cc
@PACKAGE@_sviewer_text_LDADD    = $(top_builddir)/lib/libUniSet2.la
@PACKAGE@_sviewer_text_CPPFLAGS = -I$(top_builddir)/lib
