############################################################################
# This file is part of the UniSet library                                  #
############################################################################

include $(top_builddir)/conf/common.mk

bin_SCRIPTS = uniset-start.sh uniset-stop.sh uniset-functions.sh

