############################################################################
# This file is part of the UniSet library								  #
############################################################################

bin_SCRIPTS = @PACKAGE@-start.sh @PACKAGE@-stop.sh @PACKAGE@-functions.sh

include $(top_builddir)/include.mk
